Page MenuHome GnuPG

pinentry-qt: Pressing Enter after entering first password shows password mismatch error
Closed, ResolvedPublic

Description

The changes made for T5543: pinentry-qt: Accessibility switch to repeat on enter do not work properly. The Ok button is no longer greyed out, but now pressing Enter in the first password field triggers an attempt to accept the dialog which most likely fails with a password mismatch error.

It turns out that QDialog processes the key press of the Enter key after QLineEdit has emitted the returnPressed signal and we have given focus to the repeat password field which made the Ok button the default button again.

Details

Version
1.2.0

Event Timeline

ikloecker triaged this task as Normal priority.
ikloecker created this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.

Closing this task since the original feature request is still in the QA queue.