qt: Fix giving focus to repeat field after Enter in first field

* qt/pinentrydialog.h, qt/pinentrydialog.cpp
(PinEntryDialog::keyPressEvent): New.
* qt/pinentrydialog.cpp (PinEntryDialog::PinEntryDialog): Remove
connection to QLineEdit::returnPressed signal.
(PinEntryDialog::focusChanged): Remove code changing the default property
of the Ok button.
--

Instead of listening to QLineEdit's returnPressed signal and messing
around with the dialog's default button, we simply override QDialog's
keyPressEvent() method and handle the Enter button in QDialog's stead
if the first input field had focus and we have a repeat input field.

GnuPG-bug-id: 5866