qt/pinentrydialog.h
@@ -124,6 +124,7 @@ protected Q_SLOTS:
     void toggleFormattedPassphrase();
 
 protected:
+    void keyPressEvent(QKeyEvent *event) override;
     void keyReleaseEvent(QKeyEvent *event) override;
     void showEvent(QShowEvent *event) override;
 
